import { getParents } from '../parents';

const bigListOfItems = [
  {
    isProject: true,
    children: [
      'dc3931ee-0859-4257-a3be-d4782c82188c',
      'a24a4437-5068-488e-babf-61e1fc141b45',
      '017ebf23-5d11-492c-a516-db1301211e08',
      '7909c920-d7c2-44dc-b965-cb3ec7c65465',
      'e611d898-2424-46e5-8f01-74b9ccebbea5',
      'ad74c046-5605-4691-82ee-b146c6b0222d',
      '836ec79e-e7f7-4595-bb7d-3b98ba193a1c',
      'c36a5764-281f-46ab-a1ea-4d65622d75f6',
      'cf2ac9ca-6ab4-4378-aa49-458fc9da4d60',
      '5874aafa-4e76-4cdc-a068-a62dd97c6419',
      '0af0904f-abf0-44de-b19f-e76ecd3a09d5',
      '931c47dd-decb-458e-aa84-3273a48d2608',
      'bcd1531d-9f7b-4805-b68f-e434143165b3',
    ],
    _id: 'root',
    _rev: '17-99fbb300835e6815a8087e98d4c09989',
  },
  {
    isProject: true,
    name: 'regfg',
    isCompleted: false,
    tags: [],
    dates: [],
    children: [
      'f1abf6bb-7b75-4277-990b-3219e273ae00',
      'b2ef53a8-3bc8-44a8-ab02-c3a13518888b',
    ],
    _id: 'dc3931ee-0859-4257-a3be-d4782c82188c',
    _rev: '5-2f7a09adc5edcd7602789f4d0217e6a9',
  },
  {
    isProject: true,
    name: 'fdsg',
    isCompleted: false,
    tags: [],
    dates: [],
    children: [
      '929f8d12-6c91-4720-9a04-7c8cfacbecda',
      'f15773c6-7999-413e-8877-003a74267408',
    ],
    _id: 'b2ef53a8-3bc8-44a8-ab02-c3a13518888b',
    _rev: '3-1f82164c56f0b9deee803065824f7e91',
  },
  {
    isProject: true,
    name: 'd',
    isCompleted: false,
    tags: [],
    dates: [],
    children: ['fcc07492-5d17-4c3c-a1fc-687ca8854f44'],
    _id: 'a24a4437-5068-488e-babf-61e1fc141b45',
    _rev: '2-5ab5197e946fef5977c00a2874af6218',
  },
  {
    isProject: true,
    name: 'dfg',
    isCompleted: false,
    tags: [],
    dates: [],
    children: ['c40fbcf7-a194-4727-8988-bdcd6fa301fe'],
    _id: '017ebf23-5d11-492c-a516-db1301211e08',
    _rev: '2-25dec07c3eb9d43f69fc4ac4ec789362',
  },
  {
    isProject: true,
    name: 'sdfg',
    isCompleted: false,
    tags: [],
    dates: [],
    children: [],
    _id: 'fcc07492-5d17-4c3c-a1fc-687ca8854f44',
    _rev: '1-42c4ea69547e09573de71fe79c505dfa',
  },
  {
    isProject: true,
    name: 'df',
    isCompleted: false,
    tags: [],
    dates: [],
    children: [
      '92c06da3-739b-4f00-8d75-537046dd0ac1',
      '05f6cac5-fb43-42d9-b33a-2156a31d98b1',
      '82f1b400-6b79-48f6-b482-3a0b51a24a0e',
    ],
    _id: '7909c920-d7c2-44dc-b965-cb3ec7c65465',
    _rev: '4-eeb6f5296a36657871ab4ec6fe4e1e32',
  },
  {
    isProject: true,
    name: 'g',
    isCompleted: false,
    tags: [],
    dates: [],
    children: [],
    _id: 'e611d898-2424-46e5-8f01-74b9ccebbea5',
    _rev: '1-5c71b9705c9bf91f37fc7dd65b0785e7',
  },
  {
    isProject: true,
    name: 's',
    isCompleted: false,
    tags: [],
    dates: [],
    children: ['93133d50-69c1-4892-b49f-e57cc9081f45'],
    _id: 'ad74c046-5605-4691-82ee-b146c6b0222d',
    _rev: '2-b073ae8812b1026e5b932f2fcd9a2615',
  },
  {
    isProject: true,
    name: 'g',
    isCompleted: false,
    tags: [],
    dates: [],
    children: [],
    _id: '836ec79e-e7f7-4595-bb7d-3b98ba193a1c',
    _rev: '1-73283a53619b35c54a7711041522dd52',
  },
  {
    isProject: true,
    name: 'sdf',
    isCompleted: false,
    tags: [],
    dates: [],
    children: [],
    _id: 'c36a5764-281f-46ab-a1ea-4d65622d75f6',
    _rev: '1-d5a61e548cc165de06c2482d920a14a6',
  },
  {
    isProject: true,
    name: 'fd',
    isCompleted: false,
    tags: [],
    dates: [],
    children: [],
    _id: 'cf2ac9ca-6ab4-4378-aa49-458fc9da4d60',
    _rev: '1-2f97eec5ffc221cc4227e046e525b274',
  },
  {
    isProject: true,
    name: 's',
    isCompleted: false,
    tags: [],
    dates: [],
    children: [],
    _id: '5874aafa-4e76-4cdc-a068-a62dd97c6419',
    _rev: '1-547f70ae7405d500ca79612254ee4d0c',
  },
  {
    isProject: true,
    name: 'gdf',
    isCompleted: false,
    tags: [],
    dates: [],
    children: [],
    _id: '0af0904f-abf0-44de-b19f-e76ecd3a09d5',
    _rev: '1-3c3a28bef5b308e15f41cbec3ba38cae',
  },
  {
    isProject: true,
    name: 'agsad g@dfgdfg',
    isCompleted: false,
    tags: [],
    dates: [],
    children: ['fe8e42f5-8063-49a8-886d-488ed17f9a0f'],
    _id: '931c47dd-decb-458e-aa84-3273a48d2608',
    _rev: '2-bdd93d0fb0ae19db823b5e1fc5ad483d',
  },
  {
    isProject: true,
    name: 'sdfsdf',
    isCompleted: false,
    tags: ['@sdg'],
    dates: [],
    children: [],
    _id: 'bcd1531d-9f7b-4805-b68f-e434143165b3',
    _rev: '1-9bc3b56c7a7a229237a7533c60ef7da3',
  },
  {
    isProject: true,
    children: [
      'f8e4a35b-aa8d-4bad-a70b-a35fe8e745ba',
      '768fa133-b039-43e3-b4c1-dcd674290fdc',
      'ba5ad374-e605-419d-aadf-f1e5182a6c39',
      '5a7366e7-e875-4428-8692-d91ac773b417',
    ],
    _id: 'inbox',
    _rev: '22-fc55da30987555a2cd9777a7a42ebeb9',
  },
  {
    isProject: false,
    name: 'asdf',
    isCompleted: false,
    tags: [],
    dates: [],
    _id: 'f8e4a35b-aa8d-4bad-a70b-a35fe8e745ba',
    _rev: '1-fa0d2073653afd811d53d644ea604a62',
  },
  {
    isProject: false,
    name: 'adsf',
    isCompleted: false,
    tags: [],
    dates: [],
    _id: '929f8d12-6c91-4720-9a04-7c8cfacbecda',
    _rev: '1-f7f90784a8e17dde8448aaa3b5f07ba1',
  },
  {
    isProject: false,
    name: 'adfs',
    isCompleted: false,
    tags: [],
    dates: [],
    _id: '768fa133-b039-43e3-b4c1-dcd674290fdc',
    _rev: '1-250d612e24fb2284dcdbcd4d3eca33fb',
  },
  {
    isProject: false,
    name: 'asdf',
    isCompleted: false,
    tags: [],
    dates: [],
    _id: 'c40fbcf7-a194-4727-8988-bdcd6fa301fe',
    _rev: '1-505b4490ed60678e4d96414be2a2e6a5',
  },
  {
    isProject: false,
    name: 'a',
    isCompleted: false,
    tags: [],
    dates: [],
    _id: 'f1abf6bb-7b75-4277-990b-3219e273ae00',
    _rev: '1-b81cbb124fe2e6a8ac323237847e2d8a',
  },
  {
    isProject: false,
    name: 'sdf',
    isCompleted: false,
    tags: [],
    dates: [],
    _id: 'ba5ad374-e605-419d-aadf-f1e5182a6c39',
    _rev: '1-84509105e5c6f27fd7c1a4c1e0a9c3b4',
  },
  {
    isProject: false,
    name: 'asd',
    isCompleted: false,
    tags: [],
    dates: [],
    _id: '93133d50-69c1-4892-b49f-e57cc9081f45',
    _rev: '1-dbd9eaf4e10c3dff6f5c468b653aa4f7',
  },
  {
    isProject: false,
    name: 'adfs',
    isCompleted: false,
    tags: [],
    dates: [],
    _id: '92c06da3-739b-4f00-8d75-537046dd0ac1',
    _rev: '1-a236714d4e49ec208b060eceeaac1ea7',
  },
  {
    isProject: false,
    name: 'fd',
    isCompleted: false,
    tags: [],
    dates: [],
    _id: '82f1b400-6b79-48f6-b482-3a0b51a24a0e',
    _rev: '1-1e026a2bf8ca43fb14935abdecd0b026',
  },
  {
    isProject: false,
    name: 'asdf',
    isCompleted: false,
    tags: [],
    dates: [],
    _id: '05f6cac5-fb43-42d9-b33a-2156a31d98b1',
    _rev: '1-2e95b40d60ed3709290a3dfcb22fea1c',
  },
  {
    isProject: false,
    name: 'sdf',
    isCompleted: false,
    tags: [],
    dates: [],
    _id: 'f15773c6-7999-413e-8877-003a74267408',
    _rev: '1-3141e30781fbdc1f4fa4280be23394c2',
  },
  {
    isProject: false,
    name: 'ds',
    isCompleted: false,
    tags: [],
    dates: [],
    _id: 'fe8e42f5-8063-49a8-886d-488ed17f9a0f',
    _rev: '1-9f24ffeaeb17cc45438a1edef62aaab4',
  },
  {
    isProject: false,
    name: 'df',
    isCompleted: false,
    tags: [],
    dates: [],
    _id: '5a7366e7-e875-4428-8692-d91ac773b417',
    _rev: '1-bfe0c450c55c0042e6d5d03079e633dd',
  },
];
const subsetIds = [
  'dc3931ee-0859-4257-a3be-d4782c82188c',
  'f15773c6-7999-413e-8877-003a74267408',
  'b2ef53a8-3bc8-44a8-ab02-c3a13518888b',
  'fcc07492-5d17-4c3c-a1fc-687ca8854f44',
];

// const subset = [
//   {
//     isProject: true,
//     name: 'regfg',
//     isCompleted: false,
//     tags: [],
//     dates: [],
//     children: [
//       'f1abf6bb-7b75-4277-990b-3219e273ae00',
//       'b2ef53a8-3bc8-44a8-ab02-c3a13518888b',
//     ],
//     _id: 'dc3931ee-0859-4257-a3be-d4782c82188c',
//     _rev: '5-2f7a09adc5edcd7602789f4d0217e6a9',
//   },
//   {
//     isProject: false,
//     name: 'sdf',
//     isCompleted: false,
//     tags: [],
//     dates: [],
//     _id: 'f15773c6-7999-413e-8877-003a74267408',
//     _rev: '1-3141e30781fbdc1f4fa4280be23394c2',
//   },
//   {
//     isProject: true,
//     name: 'fdsg',
//     isCompleted: false,
//     tags: [],
//     dates: [],
//     children: [
//       '929f8d12-6c91-4720-9a04-7c8cfacbecda',
//       'f15773c6-7999-413e-8877-003a74267408',
//     ],
//     _id: 'b2ef53a8-3bc8-44a8-ab02-c3a13518888b',
//     _rev: '3-1f82164c56f0b9deee803065824f7e91',
//   },
//   {
//     isProject: true,
//     name: 'sdfg',
//     isCompleted: false,
//     tags: [],
//     dates: [],
//     children: [],
//     _id: 'fcc07492-5d17-4c3c-a1fc-687ca8854f44',
//     _rev: '1-42c4ea69547e09573de71fe79c505dfa',
//   },
// ];

describe('getParents', () => {
  it('it correctly gets the parent for all items', () => {
    expect(getParents(bigListOfItems)).toMatchSnapshot();
  });
  it('it correctly gets the parents for a subset of items', () => {
    expect(
      getParents(bigListOfItems).filter(item => subsetIds.includes(item._id))
    ).toMatchSnapshot();
  });
});
